--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,50 @@
 .App {
   text-align: center;
-  width: 100%;
-  height: 100%;
+}
+
+.search-form {
+  padding: 20px;
 }
 
 .Products {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  color: white;
+  width: 90%;
+  margin: auto;
 }
 
 .Product {
-  border: 2px solid #c3073f;
-  border-radius: 30px;
-  width: 25%;
-  margin: 1%;
+  display: flex;
+  flex-direction: column;
+  flex: 1 16%;
+  padding: 2%;
+  background-color: #FFF;
+  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.25);
+  transition: 0.15s;
 }
 
-.productimage {
+.Product:hover {
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+  z-index:1;
+}
+
+.product-image img {
   max-width: 100%;
-  max-height: 100%;
+}
+
+.product-info {
+  margin-top: auto;
+}
+
+.product-button {
+  border: 0;
+  padding: 15px 80px;
+  text-align: center;
+  background-color: #1B1A20;
+  color: white;
+  transition: 0.2s;
+}
+
+.product-button:hover {
+  background-color: #86d8f7;
 }
