--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,37 @@
 .App {
   text-align: center;
+  padding-bottom: 200px;
 }
 
-.search-form {
+.top-bar {
+  position: sticky;
+  top: 0;
+  background-color: #353D44;
+  z-index: 2;
   padding: 20px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+}
+
+.top-bar .fa-search {
+  position: absolute;
+  margin-top: 16px;
+  margin-left: 16px;
+  color: #515F71;
+}
+
+.search-bar {
+  padding: 15px 50px;
+  transition: 0.2s;
+  border: none;
+  background-color: #2C313B;
+  color: white;
+  text-indent: 0px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.search-bar::placeholder {
+  color: #515F71;
 }
 
 .Products {
@@ -11,6 +39,7 @@
   flex-wrap: wrap;
   width: 90%;
   margin: auto;
+  padding: 20px;
 }
 
 .Product {
